--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -613,7 +613,7 @@
       "DELIVERY_FORM_WEIGHT": "Weight",
       "DELIVERY_FORM_TOTAL_WEIGHT": "Total weight",
       "DELIVERY_FORM_COMMENTARY": "Specify all useful details for the task execution",
-      "DELIVERY_FORM_MULTIDROPOFF": "Multiple dropoffs are not available",
+      "DELIVERY_FORM_MULTIDROPOFF": "Multiple dropoffs are available",
       "DELIVERY_FORM_ADD_DROPOFF": "Add a dropoff",
       "DELIVERY_FORM_SUBMIT": "Submit",
       "DELIVERY_FORM_CONTACT_PLACEHOLDER": "Contact",
