--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -448,7 +448,7 @@
         "DELIVERY_FORM_WEIGHT": "Peso",
         "DELIVERY_FORM_TOTAL_WEIGHT": "Peso total",
         "DELIVERY_FORM_COMMENTARY": "Especifique todos los detalles útiles para la ejecución de la tarea",
-        "DELIVERY_FORM_MULTIDROPOFF": "Las entregas múltiples no están disponibles",
+        "DELIVERY_FORM_MULTIDROPOFF": "Las entregas múltiples están disponibles",
         "DELIVERY_FORM_ADD_DROPOFF": "Añadir una entrega",
         "DELIVERY_FORM_SUBMIT": "Guardar",
         "DELIVERY_FORM_CONTACT_PLACEHOLDER": "Contacto",
