--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -621,6 +621,7 @@
         "DELIVERY_FORM_REMEMBER_ADDRESS": "Se souvenir de cette adresse",
         "DELIVERY_FORM_TOTAL_PRICE": "Prix total",
         "DELIVERY_FORM_TOTAL_VAT": "TTC",
-        "DELIVERY_FORM_TOTAL_EX_VAT": "HT"
+        "DELIVERY_FORM_TOTAL_EX_VAT": "HT",
+        "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt"
     }
 }
