--- a/translations/messages.it.yml
+++ b/translations/messages.it.yml
@@ -1156,8 +1156,8 @@ form.product.alcohol.help: Marca questa casella solo se il prodotto è una bevan
   alcolica, come una bottiglia di vino.
 form.product.alcohol.label: Questo prodotto è una bevanda alcolica
 restaurants.edenred_transactions.title: Transazioni Edenred
-restaurants.edenred_transactions.edenred_amount: Importo pagato con Edenred
-restaurants.edenred_transactions.disclaimer: Questa pagina mostra la lista di tutti
+restaurants.meal_vouchers_transactions.amount: Importo pagato con Edenred
+restaurants.meal_vouchers_transactions.disclaimer: Questa pagina mostra la lista di tutti
   gli ordini pagati con Edenred, in parte o completamente. Per questi ordini, tutto
   il denaro è stato riscosso dal ristorante. Perciò, devi inviare una fattura a ciascun
   ristorante, per richiedere la commissione dovuta.
