--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -622,6 +622,7 @@
         "DELIVERY_FORM_TOTAL_PRICE": "Prix total",
         "DELIVERY_FORM_TOTAL_VAT": "TTC",
         "DELIVERY_FORM_TOTAL_EX_VAT": "HT",
-        "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt"
+        "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt", 
+        "SWITCH_COMPLEX_DATEPICKER" : "Sélectionner une date sur plusieurs jours"
     }
 }
