--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -455,7 +455,7 @@
         "DELIVERY_FORM_ERROR_PACKAGES": "Por favor seleccione al menos una mercancía",
         "DELIVERY_FORM_ERROR_TELEPHONE": "Por favor ingrese un número de teléfono",
         "DELIVERY_FORM_ERROR_WEIGHT": "Por favor especifique un peso",
-        "DELIVERY_FORM_ERROR_HOUR": "La entrega debe ser antes de la recogida",
+        "DELIVERY_FORM_ERROR_HOUR": "La recogida debe ser antes de la entrega",
         "DELIVERY_FORM_REMEMBER_ADDRESS": "Recordar esta dirección",
         "DELIVERY_FORM_TOTAL_PRICE": "Precio total",
         "DELIVERY_FORM_TOTAL_VAT": "IVA incluido",
