--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -192,7 +192,9 @@
         "DELIVERY_FORM_TOTAL_PRICE": "Gesamtpreis",
         "DELIVERY_FORM_TOTAL_VAT": "Inkl. MwSt.",
         "DELIVERY_FORM_TOTAL_EX_VAT": "Ohne MwSt.",
-        "DELIVERY_FORM_REMOVE_DROPOFF": "Diesen Abgabeort entfernen"
+        "DELIVERY_FORM_REMOVE_DROPOFF": "Diesen Abgabeort entfernen",
+        "DELIVERY_FORM_SHOW_MORE" : "Mehr anzeigen",
+        "DELIVERY_FORM_SHOW_LESS" : "Weniger anzeigen"
     }
 
 }
