--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -461,6 +461,8 @@
         "DELIVERY_FORM_TOTAL_VAT": "IVA incluido",
         "DELIVERY_FORM_TOTAL_EX_VAT": "Sin IVA",
         "DELIVERY_FORM_REMOVE_DROPOFF": "Eliminar esta entrega",
-        "SWITCH_COMPLEX_DATEPICKER": "Seleccionar una fecha durante varios días"
+        "SWITCH_COMPLEX_DATEPICKER": "Seleccionar una fecha durante varios días",
+        "DELIVERY_FORM_SHOW_MORE" : "Ver más",
+        "DELIVERY_FORM_SHOW_LESS" : "Ver menos"
     }
 }
