--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -382,6 +382,8 @@
         "DELIVERY_FORM_TOTAL_PRICE": "Prezzo totale",
         "DELIVERY_FORM_TOTAL_VAT": "IVA inclusa",
         "DELIVERY_FORM_TOTAL_EX_VAT": "IVA esclusa",
-        "DELIVERY_FORM_REMOVE_DROPOFF": "Rimuovi questa consegna"
+        "DELIVERY_FORM_REMOVE_DROPOFF": "Rimuovi questa consegna",
+        "DELIVERY_FORM_SHOW_MORE" : "Vedi di più",
+        "DELIVERY_FORM_SHOW_LESS" : "Vedi di meno"
     }
 }
