--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1545,6 +1545,9 @@ payment_method:
   edenred: Edenred
   edenred+card: Edenred
   cash_on_delivery: Cash on delivery
+  conecs: Conecs
+  swile: Swile
+  restoflash: Restoflash
 registration.navigation.title: "Personal account creation"
 registration.info.title: "What is CoopCycle?"
 registration.info.text: "On CoopCycle, you can order food provided by restaurants near you and delivered by your local cooperative. We are proud to be an ethical alternative to the uberization of our society!"
