--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -625,6 +625,8 @@
         "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt", 
         "SWITCH_COMPLEX_DATEPICKER" : "Sélectionner une date sur plusieurs jours",
         "DELIVERY_FORM_SHOW_MORE" : "Voir plus",
-        "DELIVERY_FORM_SHOW_LESS" : "Voir moins"
+        "DELIVERY_FORM_SHOW_LESS" : "Voir moins",
+        "DELIVERY_PICKUP" : "Retrait", 
+        "DELIVERY_DROPOFF ": "Dépôt"
     }
 }
