--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1305,7 +1305,7 @@ form.checkout_address.reusable_packaging_vytal_enabled.label: Quiero usar conten
 form.product.alcohol.help: Marca esta opción únicamente si este producto es una bebida
   alcohólica, como una botella de vino.
 form.product.alcohol.label: Este producto es una bebida alcohólica
-restaurants.edenred_transactions.title: Transacciones Edenred
+restaurants.meal_vouchers_transactions.title: Transacciones Edenred
 restaurants.meal_vouchers_transactions.amount: Cantidad pagada con Edenred
 restaurants.meal_vouchers_transactions.disclaimer: Esta página muestra todos los pedidos
   pagados con Edenred, parcial o totalmente. Para estos pedidos, todo el dinero fue
