--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -616,7 +616,7 @@
         "DELIVERY_FORM_WEIGHT": "Weight",
         "DELIVERY_FORM_TOTAL_WEIGHT": "Total weight",
         "DELIVERY_FORM_COMMENTARY": "Specify all useful details for the task execution",
-        "DELIVERY_FORM_MULTIDROPOFF": "Multiple dropoffs are not available",
+        "DELIVERY_FORM_MULTIDROPOFF": "Multiple dropoffs are available",
         "DELIVERY_FORM_ADD_DROPOFF": "Add a dropoff",
         "DELIVERY_FORM_SUBMIT": "Submit",
         "DELIVERY_FORM_CONTACT_PLACEHOLDER": "Contact",
@@ -632,6 +632,8 @@
         "DELIVERY_FORM_SHOW_MORE" : "Show more",  
         "DELIVERY_FORM_SHOW_LESS" : "Show less",
         "DELIVERY_PICKUP": "Pickup",
-        "DELIVERY_DROPOFF": "Dropoff"
+        "DELIVERY_DROPOFF": "Dropoff",
+        "DELIVERY_FORM_PICKUP_HOUR": "Pickup hour",
+        "DELIVERY_FORM_DROPOFF_HOUR": "Dropoff hour"
       }
 }
