--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -627,6 +627,8 @@
         "DELIVERY_FORM_SHOW_MORE" : "Voir plus",
         "DELIVERY_FORM_SHOW_LESS" : "Voir moins",
         "DELIVERY_PICKUP" : "Retrait", 
-        "DELIVERY_DROPOFF ": "Dépôt"
+        "DELIVERY_DROPOFF ": "Dépôt", 
+        "DELIVERY_FORM_PICKUP_HOUR" : "Heure de retrait", 
+        "DELIVERY_FORM_DROPOFF_HOUR" : "Heure de dépôt"
     }
 }
