--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -609,7 +609,7 @@
         "PM_RESTOFLASH": "Restoflash",
         "PM_CONECS": "Titres-restaurant",
         "PM_SWILE": "Swile",
-        "SWITCH_COMPLEX_DATEPICKER": "Sélectionner une date sur plusieurs jours", 
+        "SWITCH_COMPLEX_DATEPICKER": "Select a date over multiples days", 
         "DELIVERY_FORM_PICKUP_INFORMATIONS": "Pickup Information",
         "DELIVERY_FORM_DROPOFF_INFORMATIONS": "Dropoff Information",
         "DELIVERY_FORM_PACKAGES": "Packages",
@@ -634,6 +634,10 @@
         "DELIVERY_PICKUP": "Pickup",
         "DELIVERY_DROPOFF": "Dropoff",
         "DELIVERY_FORM_PICKUP_HOUR": "Pickup hour",
-        "DELIVERY_FORM_DROPOFF_HOUR": "Dropoff hour"
+        "DELIVERY_FORM_DROPOFF_HOUR": "Dropoff hour",
+        "DELIVERY_FORM_NEW_PRICE": "New price",  
+        "DELIVERY_FORM_OLD_PRICE": "Old price",  
+        "DELIVERY_FORM_TRACKING_LINK": "Tracking link",  
+        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copy tracking link"
       }
 }
