--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -467,6 +467,10 @@
         "DELIVERY_PICKUP": "Recogida",
         "DELIVERY_DROPOFF": "Entrega",
         "DELIVERY_FORM_PICKUP_HOUR": "Hora de recogida",
-        "DELIVERY_FORM_DROPOFF_HOUR": "Hora de entrega"
+        "DELIVERY_FORM_DROPOFF_HOUR": "Hora de entrega",
+        "DELIVERY_FORM_NEW_PRICE": "Nuevo precio",  
+        "DELIVERY_FORM_OLD_PRICE": "Precio anterior",  
+        "DELIVERY_FORM_TRACKING_LINK": "Enlace de seguimiento",  
+        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copiar enlace de seguimiento"
     }
 }
