--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -629,6 +629,10 @@
         "DELIVERY_PICKUP" : "Retrait", 
         "DELIVERY_DROPOFF ": "Dépôt", 
         "DELIVERY_FORM_PICKUP_HOUR" : "Heure de retrait", 
-        "DELIVERY_FORM_DROPOFF_HOUR" : "Heure de dépôt"
+        "DELIVERY_FORM_DROPOFF_HOUR" : "Heure de dépôt", 
+        "DELIVERY_FORM_NEW_PRICE" : "Nouveau prix",
+        "DELIVERY_FORM_OLD_PRICE" : "Ancien prix", 
+        "DELIVERY_FORM_TRACKING_LINK" : "Lien de suivi", 
+        "DELIVERY_FROM_TRACKING_LINK_COPY" : "Copier le lien de suivi"
     }
 }
