--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -202,7 +202,8 @@
         "DELIVERY_FORM_NEW_PRICE": "Neuer Preis",  
         "DELIVERY_FORM_OLD_PRICE": "Alter Preis",  
         "DELIVERY_FORM_TRACKING_LINK": "Verfolgungslink",  
-        "DELIVERY_FROM_TRACKING_LINK_COPY": "Verfolgungslink kopieren"
+        "DELIVERY_FROM_TRACKING_LINK_COPY": "Verfolgungslink kopieren",
+        "SHOW_BARCODES": "Strichcodes anzeigen"
 
     }
 
