--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -392,6 +392,7 @@
         "DELIVERY_FORM_NEW_PRICE": "Nuovo prezzo",  
         "DELIVERY_FORM_OLD_PRICE": "Prezzo precedente",  
         "DELIVERY_FORM_TRACKING_LINK": "Link di tracciamento",  
-        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copia link di tracciamento"
+        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copia link di tracciamento",
+        "SHOW_BARCODES": "Vedi i codici a barre"
     }
 }
