--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -655,6 +655,7 @@
         "DELIVERY_FORM_NEW_PRICE": "New price",  
         "DELIVERY_FORM_OLD_PRICE": "Old price",  
         "DELIVERY_FORM_TRACKING_LINK": "Tracking link",  
-        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copy tracking link"
+        "DELIVERY_FROM_TRACKING_LINK_COPY": "Copy tracking link",
+        "SHOW_BARCODES": "View barcodes"
       }
 }
