--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1234,8 +1234,8 @@ form.product.alcohol.help: Cochez cette case seulement si ce produit est une boi
 products.on_demand_delivery.name: Livraison à la demande
 index.view_all: Voir tout
 order.adjustment_type.reusable_packaging.loopeat: Service zéro déchet
-order.adjustment_type.reusable_packaging.loopeat.help: Ces frais couvrent le lavage,
-  le réapprovisionnement des restaurants et l’achat des sacs en tissu réutilisables
+order.adjustment_type.reusable_packaging.loopeat.help: Ces frais couvrent la course
+  pour rapporter les boîtes au dépôt, le lavage des boîtes et l’achat des sacs en tissu réutilisables
 promotion_rule.is_items_total_above: Le total des produits est supérieur à %amount%
 form.store_type.multi_drop_enabled.label: Activer les dépôts multiples
 form.store_type.multi_drop_enabled.help: Permet aux utilisateur·ice·s d'ajouter un
