--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -203,7 +203,11 @@
         "DELIVERY_FORM_OLD_PRICE": "Alter Preis",  
         "DELIVERY_FORM_TRACKING_LINK": "Verfolgungslink",  
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Verfolgungslink kopieren",
-        "SHOW_BARCODES": "Strichcodes anzeigen"
+        "SHOW_BARCODES": "Strichcodes anzeigen",
+        "DELIVERY_FORM_SET_MANUALLY_PRICE": "Preis manuell festlegen",
+        "DELIVERY_FORM_PRODUCT_NAME": "Produktname",
+        "DELIVERY_FORM_NAME_INSTRUCTION": "Der Name, der in der Bestellübersicht und auf der Rechnung erscheint",
+        "DELIVERY_FORM_VAT_PRICE": "Preis inklusive MwSt."
 
     }
 
