--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -472,6 +472,10 @@
         "DELIVERY_FORM_OLD_PRICE": "Precio anterior",  
         "DELIVERY_FORM_TRACKING_LINK": "Enlace de seguimiento",  
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Copiar enlace de seguimiento",
-        "SHOW_BARCODES": "Ver los códigos de barras"
+        "SHOW_BARCODES": "Ver los códigos de barras",
+        "DELIVERY_FORM_SET_MANUALLY_PRICE": "Establecer el precio manualmente",
+        "DELIVERY_FORM_PRODUCT_NAME": "Nombre del producto",
+        "DELIVERY_FORM_NAME_INSTRUCTION": "El nombre que aparecerá en el resumen del pedido y la factura",
+        "DELIVERY_FORM_VAT_PRICE": "Precio con IVA incluido"
     }
 }
