--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -634,6 +634,10 @@
         "DELIVERY_FORM_OLD_PRICE" : "Ancien prix", 
         "DELIVERY_FORM_TRACKING_LINK" : "Lien de suivi", 
         "DELIVERY_FROM_TRACKING_LINK_COPY" : "Copier le lien de suivi",
+        "DELIVERY_FORM_SET_MANUALLY_PRICE" : "Définir le prix manuellement", 
+        "DELIVERY_FORM_PRODUCT_NAME" : "Nom du produit",
+        "DELIVERY_FORM_NAME_INSTRUCTION" : "Le nom qui apparaîtra dans le résumé de la commande et la facture",
+        "DELIVERY_FORM_VAT_PRICE" : "Prix TCC",
         "SHOW_BARCODES" : "Voir les codes-barres"
     }
 }
