--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -198,6 +198,8 @@
         "ADMIN_INVOICING_TITLE": "Invoicing [PREVIEW]",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Orders to invoice",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Period",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_SIMPLE": "Select month",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_COMPLEX": "Select custom period",
         "ADMIN_ORDERS_TO_INVOICE_REFRESH": "Refresh",
         "ADMIN_ORDERS_TO_INVOICE_DOWNLOAD": "Download",
         "ADMIN_ORDERS_TO_INVOICE_ORGANIZATION_LABEL": "Organization (number of orders)",
