--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -208,7 +208,8 @@
         "DELIVERY_FORM_PRODUCT_NAME": "Produktname",
         "DELIVERY_FORM_NAME_INSTRUCTION": "Der Name, der in der Bestellübersicht und auf der Rechnung erscheint",
         "DELIVERY_FORM_VAT_PRICE": "Preis inklusive MwSt.",
-        "DELIVERY_FORM_EXVAT_PRICE" : "Preis ohne MwSt."
+        "DELIVERY_FORM_EXVAT_PRICE" : "Preis ohne MwSt.",
+        "DELIVERY_FORM_ERROR_VARIANT_NAME" : "Bitte geben Sie einen Produktnamen ein"
 
     }
 
