--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -477,6 +477,7 @@
         "DELIVERY_FORM_PRODUCT_NAME": "Nombre del producto",
         "DELIVERY_FORM_NAME_INSTRUCTION": "El nombre que aparecerá en el resumen del pedido y la factura",
         "DELIVERY_FORM_VAT_PRICE": "Precio con IVA incluido",
-        "DELIVERY_FORM_EXVAT_PRICE" : "Precio sin IVA"
+        "DELIVERY_FORM_EXVAT_PRICE" : "Precio sin IVA",
+        "DELIVERY_FORM_ERROR_VARIANT_NAME" : "Por favor, introduzca un nombre de producto"
     }
 }
