added: display if an order was exported or not

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -209,6 +209,9 @@
         "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Subtotal (excl. VAT)",
         "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Taxes",
         "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (incl. VAT)",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTS_LABEL": "Status",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTED": "Exported in file(s):",
+        "ADMIN_ORDERS_TO_INVOICE_NOT_EXPORTED": "Not invoiced",
         "ADMIN_ORDERS_TO_INVOICE_FILE_FORMAT": "File format",
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard (CSV)",
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
