--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1317,13 +1317,13 @@ security.login.remember_me: Se souvenir de moi
 loopeat.how_it_works.title: |
   Votre restaurant fait partie du réseau « %name% » : bénéficiez de plats à emporter ou livrés en boîtes consignées. Vous pouvez désactiver cette option à tout moment dans votre panier de commande.
 loopeat.how_it_works.step_1.title: Je m'inscris
-loopeat.how_it_works.step_1.text: Inscrivez-vous sur %name% lors de la finalisation de votre commande.
-loopeat.how_it_works.step_2.title: Je paie ma 1ère consigne
-loopeat.how_it_works.step_2.text: Créditez votre cagnotte pour emprunter vos premières boîtes consignées.
-loopeat.how_it_works.step_3.title: Je commande
-loopeat.how_it_works.step_3.text: Faites-vous livrer en boites consignées.
+loopeat.how_it_works.step_1.text: sur « %name% » et j'alimente ma cagnotte (UNE SEULE FOIS)
+loopeat.how_it_works.step_2.title: Je commande
+loopeat.how_it_works.step_2.text: et je me fais livrer en boîtes consignées
+loopeat.how_it_works.step_3.title: Je me régale
+loopeat.how_it_works.step_3.text: sans jeter d'emballage
 loopeat.how_it_works.step_4.title: Je rends mes boîtes
-loopeat.how_it_works.step_4.text: Restituez vos boîtes lors de votre prochaine commande et récupérez la consigne sur votre cagnotte.
+loopeat.how_it_works.step_4.text: chez un partenaire « %name% » ou à la prochaine livraison
 stores.filters.input.placeholder: "Recherche par adresse, nom ou #id"
 basics.filter: "Filtrer"
 stores.search.results_for: 'Résultats pour la recherche <mark>%query%</mark>'
