--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1666,3 +1666,4 @@ form.store.urbantz_hub_id: Urbantz Hub Id
 form.payment.edenred.refund_amount.help: Edenred does not support partial refunds.
 restaurant.form.use_paygreen.label: Use Paygreen for this shop
 restaurant.meal_vouchers_transactions.emitter: Emitter
+form.settings.version: Version
