--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1667,3 +1667,6 @@ form.payment.edenred.refund_amount.help: Edenred does not support partial refund
 restaurant.form.use_paygreen.label: Use Paygreen for this shop
 restaurant.meal_vouchers_transactions.emitter: Emitter
 form.settings.version: Version
+store.form.storeGLN.label: Store GLN
+store.form.storeGLN.help: Find the GLN number on <a href="https://www.gs1.org/services/verified-by-gs1" target="_blank">GS1 website</a>
+form.settings.company_gln.label: Company GLN
